--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -155,7 +155,7 @@ body{
 
 /* Music */
 .musicSection {
-    width: 100vw;
+    width: calc(100% - 6rem);
     height: auto;
     display: flex;
     justify-content: flex-end;
